--- a/includes/css/aha-extras-tab.css
+++ b/includes/css/aha-extras-tab.css
@@ -337,20 +337,34 @@ table#report-card-table-sticky .healthy {
 	background-position:center center;
 }
 
-table#report-card-table .healthy.community_tobacco_1-top-3,
-table#report-card-table .healthy.community_tobacco_2-top-3,
-table#report-card-table .healthy.community_phys_1-top-3,
-table#report-card-table .healthy.community_diet_1-top-3,
-table#report-card-table .healthy.community_diet_2-top-3,
-table#report-card-table .healthy.community_diet_3-top-3,
-table#report-card-table .healthy.school_phys_1-top-3,
-table#report-card-table .healthy.school_phys_2-top-3,
-table#report-card-table .healthy.school_diet_1-top-3,
-table#report-card-table .healthy.school_diet_2-top-3,
-table#report-card-table .healthy.school_cpr_1-top-3,
-table#report-card-table .healthy.care_factors_1-top-3,
-table#report-card-table .healthy.care_acute_1-top-3,
-table#report-card-table .healthy.care_acute_2-top-3 {
+table#report-card-table .healthy.community_tobacco_1-top-3.has-star,
+table#report-card-table .healthy.community_tobacco_1-priority.has-star,
+table#report-card-table .healthy.community_tobacco_2-top-3.has-star,
+table#report-card-table .healthy.community_tobacco_2-priority.has-star,
+table#report-card-table .healthy.community_phys_1-top-3.has-star,
+table#report-card-table .healthy.community_phys_1-priority.has-star,
+table#report-card-table .healthy.community_diet_1-top-3.has-star,
+table#report-card-table .healthy.community_diet_1-priority.has-star,
+table#report-card-table .healthy.community_diet_2-top-3.has-star,
+table#report-card-table .healthy.community_diet_2-priority.has-star,
+table#report-card-table .healthy.community_diet_3-top-3.has-star,
+table#report-card-table .healthy.community_diet_3-priority.has-star,
+table#report-card-table .healthy.school_phys_1-top-3.has-star,
+table#report-card-table .healthy.school_phys_1-priority.has-star,
+table#report-card-table .healthy.school_phys_2-top-3.has-star,
+table#report-card-table .healthy.school_phys_2-priority.has-star,
+table#report-card-table .healthy.school_diet_1-top-3.has-star,
+table#report-card-table .healthy.school_diet_1-priority.has-star,
+table#report-card-table .healthy.school_diet_2-top-3.has-star,
+table#report-card-table .healthy.school_diet_2-priority.has-star,
+table#report-card-table .healthy.school_cpr_1-top-3.has-star,
+table#report-card-table .healthy.school_cpr_1-priority.has-star,
+table#report-card-table .healthy.care_factors_1-top-3.has-star,
+table#report-card-table .healthy.care_factors_1-priority.has-star,
+table#report-card-table .healthy.care_acute_1-top-3.has-star,
+table#report-card-table .healthy.care_acute_1-priority.has-star,
+table#report-card-table .healthy.care_acute_2-top-3 .has-star,
+table#report-card-table .healthy.care_acute_2-priority .has-star{
 	background-image: url('../im/healthy_40_star.png');
 }
 
@@ -361,20 +375,34 @@ table#report-card-table-sticky .intermediate{
 	background-repeat:no-repeat;
 	background-position:center center
 }
-table#report-card-table .intermediate.community_tobacco_1-top-3,
-table#report-card-table .intermediate.community_tobacco_2-top-3,
-table#report-card-table .intermediate.community_phys_1-top-3,
-table#report-card-table .intermediate.community_diet_1-top-3,
-table#report-card-table .intermediate.community_diet_2-top-3,
-table#report-card-table .intermediate.community_diet_3-top-3,
-table#report-card-table .intermediate.school_phys_1-top-3,
-table#report-card-table .intermediate.school_phys_2-top-3,
-table#report-card-table .intermediate.school_diet_1-top-3,
-table#report-card-table .intermediate.school_diet_2-top-3,
-table#report-card-table .intermediate.school_cpr_1-top-3,
-table#report-card-table .intermediate.care_factors_1-top-3,
-table#report-card-table .intermediate.care_acute_1-top-3,
-table#report-card-table .intermediate.care_acute_2-top-3 {
+table#report-card-table .intermediate.community_tobacco_1-top-3.has-star,
+table#report-card-table .intermediate.community_tobacco_1-priority.has-star,
+table#report-card-table .intermediate.community_tobacco_2-top-3.has-star,
+table#report-card-table .intermediate.community_tobacco_2-priority.has-star,
+table#report-card-table .intermediate.community_phys_1-top-3.has-star,
+table#report-card-table .intermediate.community_phys_1-priority.has-star,
+table#report-card-table .intermediate.community_diet_1-top-3.has-star,
+table#report-card-table .intermediate.community_diet_1-priority.has-star,
+table#report-card-table .intermediate.community_diet_2-top-3.has-star,
+table#report-card-table .intermediate.community_diet_2-priority.has-star,
+table#report-card-table .intermediate.community_diet_3-top-3.has-star,
+table#report-card-table .intermediate.community_diet_3-priority.has-star,
+table#report-card-table .intermediate.school_phys_1-top-3.has-star,
+table#report-card-table .intermediate.school_phys_1-priority.has-star,
+table#report-card-table .intermediate.school_phys_2-top-3.has-star,
+table#report-card-table .intermediate.school_phys_2-priority.has-star,
+table#report-card-table .intermediate.school_diet_1-top-3.has-star,
+table#report-card-table .intermediate.school_diet_1-priority.has-star,
+table#report-card-table .intermediate.school_diet_2-top-3.has-star,
+table#report-card-table .intermediate.school_diet_2-priority.has-star,
+table#report-card-table .intermediate.school_cpr_1-top-3.has-star,
+table#report-card-table .intermediate.school_cpr_1-priority.has-star,
+table#report-card-table .intermediate.care_factors_1-top-3.has-star,
+table#report-card-table .intermediate.care_factors_1-priority.has-star,
+table#report-card-table .intermediate.care_acute_1-top-3.has-star,
+table#report-card-table .intermediate.care_acute_1-priority.has-star,
+table#report-card-table .intermediate.care_acute_2-top-3.has-star,
+table#report-card-table .intermediate.care_acute_2-priority.has-star {
 	background-image: url('../im/intermediate_40_star.png');
 }
 
@@ -384,20 +412,34 @@ table#report-card-table-sticky .poor{
 	background-repeat:no-repeat;
 	background-position:center center
 }
-table#report-card-table .poor.community_tobacco_1-top-3,
-table#report-card-table .poor.community_tobacco_2-top-3,
-table#report-card-table .poor.community_phys_1-top-3,
-table#report-card-table .poor.community_diet_1-top-3,
-table#report-card-table .poor.community_diet_2-top-3,
-table#report-card-table .poor.community_diet_3-top-3,
-table#report-card-table .poor.school_phys_1-top-3,
-table#report-card-table .poor.school_phys_2-top-3,
-table#report-card-table .poor.school_diet_1-top-3,
-table#report-card-table .poor.school_diet_2-top-3,
-table#report-card-table .poor.school_cpr_1-top-3,
-table#report-card-table .poor.care_factors_1-top-3,
-table#report-card-table .poor.care_acute_1-top-3,
-table#report-card-table .poor.care_acute_2-top-3 {
+table#report-card-table .poor.community_tobacco_1-top-3.has-star,
+table#report-card-table .poor.community_tobacco_1-priority.has-star,
+table#report-card-table .poor.community_tobacco_2-top-3.has-star,
+table#report-card-table .poor.community_tobacco_2-priority.has-star,
+table#report-card-table .poor.community_phys_1-top-3.has-star,
+table#report-card-table .poor.community_phys_1-priority.has-star,
+table#report-card-table .poor.community_diet_1-top-3.has-star,
+table#report-card-table .poor.community_diet_1-priority.has-star,
+table#report-card-table .poor.community_diet_2-top-3.has-star,
+table#report-card-table .poor.community_diet_2-priority.has-star,
+table#report-card-table .poor.community_diet_3-top-3.has-star,
+table#report-card-table .poor.community_diet_3-priority.has-star,
+table#report-card-table .poor.school_phys_1-top-3.has-star,
+table#report-card-table .poor.school_phys_1-priority.has-star,
+table#report-card-table .poor.school_phys_2-top-3.has-star,
+table#report-card-table .poor.school_phys_2-priority.has-star,
+table#report-card-table .poor.school_diet_1-top-3.has-star,
+table#report-card-table .poor.school_diet_1-priority.has-star,
+table#report-card-table .poor.school_diet_2-top-3.has-star,
+table#report-card-table .poor.school_diet_2-priority.has-star,
+table#report-card-table .poor.school_cpr_1-top-3.has-star,
+table#report-card-table .poor.school_cpr_1-priority.has-star,
+table#report-card-table .poor.care_factors_1-top-3.has-star,
+table#report-card-table .poor.care_factors_1-priority.has-star,
+table#report-card-table .poor.care_acute_1-top-3.has-star,
+table#report-card-table .poor.care_acute_1-priority.has-star,
+table#report-card-table .poor.care_acute_2-top-3.has-star,
+table#report-card-table .poor.care_acute_2-priority.has-star {
 	background-image: url('../im/poor_40_star.png');
 }
 
@@ -467,6 +509,9 @@ section#revenue-report-card select.priority{
 }
 section#revenue-report-card select{
 	margin-left:-1em;
+}
+section#revenue-report-card select.revenue-priority-select{
+	margin-left:1em;
 }
 section#summary-report-card tr.top-3-row th.selected-top-3 a.button,
 section#revenue-report-card tr.top-3-row th.selected-top-3 a.button{
@@ -559,7 +604,9 @@ td.care_acute_2-top-3 {
 	margin-top:24px;
 }
 section#summary-report-card tr.top-3-row .top-3-star,
-section#revenue-report-card tr.top-3-row .top-3-star{
+section#revenue-report-card tr.top-3-row .top-3-star,
+section#summary-report-card tr.top-3-row .priority-star,
+section#revenue-report-card tr.top-3-row .priority-star{
 	background-image:url(../im/starswhite_29.png);
 	background-repeat:no-repeat;
 	background-position:0 0px;
@@ -568,18 +615,24 @@ section#revenue-report-card tr.top-3-row .top-3-star{
     width: 30px;
 }
 section#summary-report-card tr.top-3-row .top-3-count,
-section#revenue-report-card tr.top-3-row .top-3-count{
+section#revenue-report-card tr.top-3-row .top-3-count,
+section#summary-report-card tr.top-3-row .priority-count,
+section#revenue-report-card tr.top-3-row .priority-count{
 	color:white;
 	margin-top: -25px;
     position: absolute;
     width: 28px;
 }
 section#summary-report-card tr.top-3-row th.selected-top-3 .top-3-star,
-section#revenue-report-card tr.top-3-row th.selected-top-3 .top-3-star{
+section#revenue-report-card tr.top-3-row th.selected-top-3 .top-3-star,
+section#summary-report-card tr.top-3-row th.selected-top-3 .priority-star,
+section#revenue-report-card tr.top-3-row th.selected-top-3 .priority-star{
 	background-position:0 -58px;
 }
 section#summary-report-card tr.top-3-row th.selected-top-3 .top-3-count,
-section#revenue-report-card tr.top-3-row th.selected-top-3 .top-3-count{
+section#revenue-report-card tr.top-3-row th.selected-top-3 .top-3-count,
+section#summary-report-card tr.top-3-row th.selected-top-3 .priority-count,
+section#revenue-report-card tr.top-3-row th.selected-top-3 .priority-count{
 	color:#222222;
 }
 tr.criteria-row th {
@@ -587,6 +640,7 @@ tr.criteria-row th {
 	font-size:10px;
 }
 
+/*
 .top-3-answer-yes{
 	background-image: url("../im/star_32.png");
     height: 21px;
@@ -603,6 +657,23 @@ tr.criteria-row th {
 	background-repeat:no-repeat;
 	background-position:center center;
 }
+*/
+
+section#revenue-report-card tbody tr.board-data td{
+	background-image: url("../im/staroutline_greyer_32.png");
+    height: 21px;
+    margin-left: 36%;
+    width: 21px;
+	background-repeat:no-repeat;
+	background-position:center center;
+}
+section#revenue-report-card tbody tr.board-data td.has-star {
+	background-image: url("../im/star_32.png");
+}
+section#revenue-report-card tbody tr.board-data td.no-star {
+	background-image: none !important;
+}
+
 .sort-arrow{
 	cursor:pointer;
 }
@@ -705,19 +776,33 @@ section#revenue-report-card .legend .indicator.staroutline {
 		background-image:none !important;
 	}
 	table#report-card-table .healthy.community_tobacco_1-top-3:before,
+	table#report-card-table .healthy.community_tobacco_1-priority:before,
 	table#report-card-table .healthy.community_tobacco_2-top-3:before,
+	table#report-card-table .healthy.community_tobacco_2-priority:before,
 	table#report-card-table .healthy.community_phys_1-top-3:before,
+	table#report-card-table .healthy.community_phys_1-priority:before,
 	table#report-card-table .healthy.community_diet_1-top-3:before,
+	table#report-card-table .healthy.community_diet_1-priority:before,
 	table#report-card-table .healthy.community_diet_2-top-3:before,
+	table#report-card-table .healthy.community_diet_2-priority:before,
 	table#report-card-table .healthy.community_diet_3-top-3:before,
+	table#report-card-table .healthy.community_diet_3-priority:before,
 	table#report-card-table .healthy.school_phys_1-top-3:before,
+	table#report-card-table .healthy.school_phys_1-priority:before,
 	table#report-card-table .healthy.school_phys_2-top-3:before,
+	table#report-card-table .healthy.school_phys_2-priority:before,
 	table#report-card-table .healthy.school_diet_1-top-3:before,
+	table#report-card-table .healthy.school_diet_1-priority:before,
 	table#report-card-table .healthy.school_diet_2-top-3:before,
+	table#report-card-table .healthy.school_diet_2-priority:before,
 	table#report-card-table .healthy.school_cpr_1-top-3:before,
+	table#report-card-table .healthy.school_cpr_1-priority:before,
 	table#report-card-table .healthy.care_factors_1-top-3:before,
+	table#report-card-table .healthy.care_factors_1-priority:before,
 	table#report-card-table .healthy.care_acute_1-top-3:before,
-	table#report-card-table .healthy.care_acute_2-top-3:before {
+	table#report-card-table .healthy.care_acute_1-priority:before,
+	table#report-card-table .healthy.care_acute_2-top-3:before,
+	table#report-card-table .healthy.care_acute_2-priority:before {
 		content: url('../im/healthy_40_star.png');
 		background-image:none !important;
 	}
@@ -727,19 +812,33 @@ section#revenue-report-card .legend .indicator.staroutline {
 		background-image:none !important;
 	}
 	table#report-card-table .intermediate.community_tobacco_1-top-3:before,
+	table#report-card-table .intermediate.community_tobacco_1-priority:before,
 	table#report-card-table .intermediate.community_tobacco_2-top-3:before,
+	table#report-card-table .intermediate.community_tobacco_2-priority:before,
 	table#report-card-table .intermediate.community_phys_1-top-3:before,
+	table#report-card-table .intermediate.community_phys_1-priority:before,
 	table#report-card-table .intermediate.community_diet_1-top-3:before,
+	table#report-card-table .intermediate.community_diet_1-priority:before,
 	table#report-card-table .intermediate.community_diet_2-top-3:before,
+	table#report-card-table .intermediate.community_diet_2-priority:before,
 	table#report-card-table .intermediate.community_diet_3-top-3:before,
+	table#report-card-table .intermediate.community_diet_3-priority:before,
 	table#report-card-table .intermediate.school_phys_1-top-3:before,
+	table#report-card-table .intermediate.school_phys_1-priority:before,
 	table#report-card-table .intermediate.school_phys_2-top-3:before,
+	table#report-card-table .intermediate.school_phys_2-priority:before,
 	table#report-card-table .intermediate.school_diet_1-top-3:before,
+	table#report-card-table .intermediate.school_diet_1-priority:before,
 	table#report-card-table .intermediate.school_diet_2-top-3:before,
+	table#report-card-table .intermediate.school_diet_2-priority:before,
 	table#report-card-table .intermediate.school_cpr_1-top-3:before,
+	table#report-card-table .intermediate.school_cpr_1-priority:before,
 	table#report-card-table .intermediate.care_factors_1-top-3:before,
+	table#report-card-table .intermediate.care_factors_1-priority:before,
 	table#report-card-table .intermediate.care_acute_1-top-3:before,
-	table#report-card-table .intermediate.care_acute_2-top-3:before {
+	table#report-card-table .intermediate.care_acute_1-priority:before,
+	table#report-card-table .intermediate.care_acute_2-top-3:before,
+	table#report-card-table .intermediate.care_acute_2-priority:before {
 		content: url('../im/intermediate_40_star.png');
 		background-image:none !important;
 	}
@@ -749,19 +848,33 @@ section#revenue-report-card .legend .indicator.staroutline {
 		background-image:none !important;
 	}
 	table#report-card-table .poor.community_tobacco_1-top-3:before,
+	table#report-card-table .poor.community_tobacco_1-priority:before,
 	table#report-card-table .poor.community_tobacco_2-top-3:before,
+	table#report-card-table .poor.community_tobacco_2-priority:before,
 	table#report-card-table .poor.community_phys_1-top-3:before,
+	table#report-card-table .poor.community_phys_1-priority:before,
 	table#report-card-table .poor.community_diet_1-top-3:before,
+	table#report-card-table .poor.community_diet_1-priority:before,
 	table#report-card-table .poor.community_diet_2-top-3:before,
+	table#report-card-table .poor.community_diet_2-priority:before,
 	table#report-card-table .poor.community_diet_3-top-3:before,
+	table#report-card-table .poor.community_diet_3-priority:before,
 	table#report-card-table .poor.school_phys_1-top-3:before,
+	table#report-card-table .poor.school_phys_1-priority:before,
 	table#report-card-table .poor.school_phys_2-top-3:before,
+	table#report-card-table .poor.school_phys_2-priority:before,
 	table#report-card-table .poor.school_diet_1-top-3:before,
+	table#report-card-table .poor.school_diet_1-priority:before,
 	table#report-card-table .poor.school_diet_2-top-3:before,
+	table#report-card-table .poor.school_diet_2-priority:before,
 	table#report-card-table .poor.school_cpr_1-top-3:before,
+	table#report-card-table .poor.school_cpr_1-priority:before,
 	table#report-card-table .poor.care_factors_1-top-3:before,
+	table#report-card-table .poor.care_factors_1-priority:before,
 	table#report-card-table .poor.care_acute_1-top-3:before,
-	table#report-card-table .poor.care_acute_2-top-3 :before{
+	table#report-card-table .poor.care_acute_1-priority:before,
+	table#report-card-table .poor.care_acute_2-top-3 :before,
+	table#report-card-table .poor.care_acute_2-priority :before{
 		content: url('../im/poor_40_star.png');
 		background-image:none !important;
 	}
